--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -7,9 +7,9 @@
 
 **หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอวางประกันปัญหาพิกัดอัตราศุลกากร**
 
-**ตัวอย่าง**  พิกัดที่ต้องชำระ คือ 34022013 อัตรา 10 %
+**ตัวอย่าง**  **พิกัดที่ต้องชำระ** คือ **34022013** อัตรา **10 %**
 
-พิกัดที่ขอวางประกัน  คือ 38099110 อัตรา 0 %
+**พิกัดที่ขอวางประกัน**  คือ **38099110** อัตรา **0 %**
 
 ส่งข้อมูลดังนี้
 
@@ -27,5 +27,5 @@ Argumentative Privilege Code:  000
 
 Argumentative Tariff Sequence:  55005
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjEwNzAxNjI2MF19
+eyJoaXN0b3J5IjpbNjcxODI1NDEyXX0=
 -->
