KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -7,25 +7,25 @@
 
 **หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอวางประกันปัญหาพิกัดอัตราศุลกากร**
 
-**ตัวอย่าง**  **พิกัดที่ต้องชำระ** คือ **34022013** อัตรา **10 %**
+**_ตัวอย่าง_**  **พิกัดที่ต้องชำระ** คือ **34022013** อัตรา **10 %**
 
 **พิกัดที่ขอวางประกัน**  คือ **38099110** อัตรา **0 %**
 
 ส่งข้อมูลดังนี้
 
-Tariff Code :  000034022013
+**Tariff Code :**  000034022013
 
-Tariff Sequence: 55005
+**Tariff Sequence:** 55005
 
-Privilege Code:  000
+**Privilege Code:**  000
 
-CIF Value Baht:  510825.00
+**CIF Value Baht:**  510825.00
 
-Argumentative Tariff Code:  38099110
+**Argumentative Tariff Code:**  38099110
 
-Argumentative Privilege Code:  000
+**Argumentative Privilege Code:**  000
 
-Argumentative Tariff Sequence:  55005
+**Argumentative Tariff Sequence:**  55005
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjcxODI1NDEyXX0=
+eyJoaXN0b3J5IjpbLTkxMzEyNzE3MF19
 -->
