KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -5,27 +5,8 @@
 
 การวางประกัน กรณีที่พนักงานศุลกากรเห็นว่ามีปัญหาเกี่ยวกับค่าอากรในการปฏิบัติพิธีการ ตามมาตรา 55 และถูกวางประกันไว้แล้ว หากผู้นำของเข้ามีความประสงค์ขอวางประกันของที่นำเข้าในลักษณะเดิมที่นำเข้ามาในภายหลัง ให้สำแดงพิกัดอัตราศุลกากรในอัตราสูง ชำระภาษีอากรในอัตราอากรที่สำแดงต่ำและถูกจับกุม โดยนำยอดอากรที่เป็นส่วนต่างของค่าภาษีขาเข้าสำแดงไว้ในช่องวางประกัน แต่ให้ชำระภาษีมูลค่าเพิ่มในพิกัดอัตราอากรสูงเต็มจำนวน โดยให้บันทึกพิกัดอัตราศุลกากรในอัตราที่ขอวางประกันในช่อง Argumentative ทั้ง 3 ช่องตามตัวอย่างด้านล่างนี้  พร้อมทั้ง ให้ระบุเลขที่ใบขนสินค้าขาเข้าฉบับที่มีปัญหาที่ช่อง Reference Declaration Number และ Reference Declaration Line Number โดยจัดทำข้อมูลใบขนสินค้าขาเข้าเพื่อขอพบพนักงานศุลกากรกรณีมีปัญหาพิกัด/ราคา (Assessment Request)
 
-**หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอวางประกันปัญหาพิกัดอัตราศุลกากร**
 
-**_ตัวอย่าง_**  **พิกัดที่ต้องชำระ** คือ **34022013** อัตรา **10 %**
-
-**พิกัดที่ขอวางประกัน**  คือ **38099110** อัตรา **0 %**
-
-ส่งข้อมูลดังนี้
-
-**Tariff Code :**  000034022013
-
-**Tariff Sequence:** 55005
-
-**Privilege Code:**  000
-
-**CIF Value Baht:**  510825.00
-
-**Argumentative Tariff Code:**  38099110
-
-**Argumentative Privilege Code:**  000
-
-**Argumentative Tariff Sequence:**  55005
+![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page106.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkxMzEyNzE3MF19
+eyJoaXN0b3J5IjpbNDY4NjQ0MjgzLC05MTMxMjcxNzBdfQ==
 -->
