--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -9,9 +9,12 @@
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page106.png)
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page106_2.png)
 
-- 
+
+
+**หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอวางประกันปัญหาราคา**
+
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page107.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNDAwNDM2MzIsNDY4NjQ0MjgzLC05MT
+eyJoaXN0b3J5IjpbLTE2NzMyMjI4MDEsNDY4NjQ0MjgzLC05MT
 MxMjcxNzBdfQ==
 -->
