--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -5,16 +5,17 @@
 
 การวางประกัน กรณีที่พนักงานศุลกากรเห็นว่ามีปัญหาเกี่ยวกับค่าอากรในการปฏิบัติพิธีการ ตามมาตรา 55 และถูกวางประกันไว้แล้ว หากผู้นำของเข้ามีความประสงค์ขอวางประกันของที่นำเข้าในลักษณะเดิมที่นำเข้ามาในภายหลัง ให้สำแดงพิกัดอัตราศุลกากรในอัตราสูง ชำระภาษีอากรในอัตราอากรที่สำแดงต่ำและถูกจับกุม โดยนำยอดอากรที่เป็นส่วนต่างของค่าภาษีขาเข้าสำแดงไว้ในช่องวางประกัน แต่ให้ชำระภาษีมูลค่าเพิ่มในพิกัดอัตราอากรสูงเต็มจำนวน โดยให้บันทึกพิกัดอัตราศุลกากรในอัตราที่ขอวางประกันในช่อง Argumentative ทั้ง 3 ช่องตามตัวอย่างด้านล่างนี้  พร้อมทั้ง ให้ระบุเลขที่ใบขนสินค้าขาเข้าฉบับที่มีปัญหาที่ช่อง Reference Declaration Number และ Reference Declaration Line Number โดยจัดทำข้อมูลใบขนสินค้าขาเข้าเพื่อขอพบพนักงานศุลกากรกรณีมีปัญหาพิกัด/ราคา (Assessment Request)
 
+**- หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอวางประกันปัญหาพิกัดอัตราศุลกากร**
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page106.png)
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page106_2.png)
 
 
 
-**หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอวางประกันปัญหาราคา**
+**- หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอวางประกันปัญหาราคา**
 
 ![enter image description here](https://github.com/yosarawut/WorkingArea/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page107.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NzMyMjI4MDEsNDY4NjQ0MjgzLC05MT
+eyJoaXN0b3J5IjpbLTEwMTIzMTc0NDIsNDY4NjQ0MjgzLC05MT
 MxMjcxNzBdfQ==
 -->
