KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -15,7 +15,14 @@
 **- หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอวางประกันปัญหาราคา**
 
 ![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page107.png)
+
+### การขอเรียกร้องขอคืนเงินอากรเพราะเหตุที่ได้เสียไว้เกินจำนวนที่พึงต้องเสียจริง
+
+การขอคืนเงินอากรกรณีที่เสียไว้เกิน ตามมาตรา 25 ผู้ประกอบการต้องสำแดงพิกัดอัตราศุลกากรในอัตราสูง ชำระอากรอัตราอากรสูง และขอคืนอากรไว้ในพิกัดอัตราอากรซึ่งต่ำกว่าที่สำแดง ในช่อง Argumentative ทั้ง 4 ช่องตามตัวอย่างด้านล่างนี้ โดยจัดทำข้อมูลใบขนสินค้าขาเข้าเพื่อขอพบพนักงานศุลกากรกรณีมีปัญหาพิกัด/ราคา (Assessment Request)
+
+**หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอโต้แย้งปัญหาพิกัดอัตราศุลกากร**
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MTMwNDU2MjMsLTEwMTIzMTc0NDIsND
-Y4NjQ0MjgzLC05MTMxMjcxNzBdfQ==
+eyJoaXN0b3J5IjpbLTc2Mjk4MTY5LC0xMDEyMzE3NDQyLDQ2OD
+Y0NDI4MywtOTEzMTI3MTcwXX0=
 -->
