--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -24,7 +24,13 @@
 
 **หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอโต้แย้งปัญหาพิกัดอัตราศุลกากร**
 
+![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page108.png)
+
+
+
+![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page108_2.png)
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2NzU4MzQ4MDIsLTEwMTIzMTc0NDIsND
-Y4NjQ0MjgzLC05MTMxMjcxNzBdfQ==
+eyJoaXN0b3J5IjpbLTkyNzk2ODg4NSwtMTY3NTgzNDgwMiwtMT
+AxMjMxNzQ0Miw0Njg2NDQyODMsLTkxMzEyNzE3MF19
 -->
