--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -26,11 +26,16 @@
 
 ![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page108.png)
 
+**หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอโต้แย้งปัญหาตามมาตรา 14**
+
+ตัวอย่าง  	พิกัดที่ต้องชำระ		   คือ	34022013	อัตรา 10 %	
+		      พิกัดที่ขอโต้แย้ง	            คือ 	38099110 	อัตรา 0 %
+ส่งข้อมูลดังนี้
 
 
 ![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page108_2.png)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkyNzk2ODg4NSwtMTY3NTgzNDgwMiwtMT
-AxMjMxNzQ0Miw0Njg2NDQyODMsLTkxMzEyNzE3MF19
+eyJoaXN0b3J5IjpbLTEzNjYxMTU0MTEsLTE2NzU4MzQ4MDIsLT
+EwMTIzMTc0NDIsNDY4NjQ0MjgzLC05MTMxMjcxNzBdfQ==
 -->
