--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -38,8 +38,14 @@
 
 **หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  กรณีขอโต้แย้งปัญหาราคา**
 
+![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page109.png)
+
+----
+
+## ขอวางประกันกองทุนน้ำมันเชื้อเพลิงและเงินกองทุนเพื่อส่งเสริมการอนุรักษ์พลังงาน
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMjA4ODg5OTE2NSwtMTY3NTgzNDgwMiwtMT
+eyJoaXN0b3J5IjpbMTA0NjA0NDQzNiwtMTY3NTgzNDgwMiwtMT
 AxMjMxNzQ0Miw0Njg2NDQyODMsLTkxMzEyNzE3MF19
 -->
