KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -44,8 +44,10 @@
 
 ## ขอวางประกันกองทุนน้ำมันเชื้อเพลิงและเงินกองทุนเพื่อส่งเสริมการอนุรักษ์พลังงาน
 
+หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  **กรณีขอวางประกันกองทุนน้ำมันเชื้อเพลิงและเงินกองทุนเพื่อส่งเสริมการอนุรักษ์พลังงาน**
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTA0NjA0NDQzNiwtMTY3NTgzNDgwMiwtMT
+eyJoaXN0b3J5IjpbLTQwMTEyNDkzNiwtMTY3NTgzNDgwMiwtMT
 AxMjMxNzQ0Miw0Njg2NDQyODMsLTkxMzEyNzE3MF19
 -->
