--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -46,8 +46,15 @@
 
 หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  **กรณีขอวางประกันกองทุนน้ำมันเชื้อเพลิงและเงินกองทุนเพื่อส่งเสริมการอนุรักษ์พลังงาน**
 
+![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page110.png)
+![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page111.png)
+
+
+
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQwMTEyNDkzNiwtMTY3NTgzNDgwMiwtMT
-AxMjMxNzQ0Miw0Njg2NDQyODMsLTkxMzEyNzE3MF19
+eyJoaXN0b3J5IjpbNTk4NTM3NzEzLC00MDExMjQ5MzYsLTE2Nz
+U4MzQ4MDIsLTEwMTIzMTc0NDIsNDY4NjQ0MjgzLC05MTMxMjcx
+NzBdfQ==
 -->
