--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -49,12 +49,24 @@
 ![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page110.png)
 ![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page111.png)
 
+## ขอชำระหรือวางประกันอากรตอบโต้การทุ่มตลาดและการอุดหนุน
 
+หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  **กรณีมีค่าอากรตอบโต้การทุ่มตลาดและการอุดหนุนต้องชำระ**
+
+![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page112.png)
+
+หลักการสำแดงข้อมูลใบขนสินค้าขาเข้า  **กรณีขอวางประกันค่าอากรตอบโต้การทุ่มตลาดและ
+การอุดหนุน**
+
+**ตัวอย่าง**  	ราคาศุลกากรที่ต้องชำระ	คือ 	100,000
+ส่งข้อมูลดังนี้
+Tariff Code	000034022013 
+CIF Value Baht	0000000100000.00
 
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNTk4NTM3NzEzLC00MDExMjQ5MzYsLTE2Nz
-U4MzQ4MDIsLTEwMTIzMTc0NDIsNDY4NjQ0MjgzLC05MTMxMjcx
-NzBdfQ==
+eyJoaXN0b3J5IjpbLTcxMDIwMjQ4NSwtNDAxMTI0OTM2LC0xNj
+c1ODM0ODAyLC0xMDEyMzE3NDQyLDQ2ODY0NDI4MywtOTEzMTI3
+MTcwXX0=
 -->
