KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การขอวางประกันโต้แย้งพิกัดอัตราศุลกากร.md
@@ -59,14 +59,15 @@
 การอุดหนุน**
 
 **ตัวอย่าง**  	ราคาศุลกากรที่ต้องชำระ	คือ 	100,000
+
 ส่งข้อมูลดังนี้
-Tariff Code	000034022013 
-CIF Value Baht	0000000100000.00
+**Tariff Code**	000034022013 
+**CIF Value Baht**	0000000100000.00
 
-
+![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page113.png)
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTcxMDIwMjQ4NSwtNDAxMTI0OTM2LC0xNj
-c1ODM0ODAyLC0xMDEyMzE3NDQyLDQ2ODY0NDI4MywtOTEzMTI3
-MTcwXX0=
+eyJoaXN0b3J5IjpbNzA2NDg4NDM0LC00MDExMjQ5MzYsLTE2Nz
+U4MzQ4MDIsLTEwMTIzMTc0NDIsNDY4NjQ0MjgzLC05MTMxMjcx
+NzBdfQ==
 -->
