KnowledgeCenter/e-Customs/e-Import/e-Import-manual/รหัสเหตุผลการวางประกัน.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/รหัสเหตุผลการวางประกัน.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/รหัสเหตุผลการวางประกัน.md
@@ -1,5 +1,6 @@
-รหัสเหตุผลการวางประกัน (Deposit Reason Code)
-==
+## รหัสเหตุผลการวางประกัน (Deposit Reason Code)
+
+
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTEzOTQ4NTY2OTFdfQ==
+eyJoaXN0b3J5IjpbMTk5NzI5NDAzOV19
 -->
