--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/รหัสเหตุผลการวางประกัน.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/รหัสเหตุผลการวางประกัน.md
@@ -1,6 +1,8 @@
 ## รหัสเหตุผลการวางประกัน (Deposit Reason Code)
 
+![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page120.png)
+
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk5NzI5NDAzOV19
+eyJoaXN0b3J5IjpbLTY1MzY1OTU0OF19
 -->
