--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/รหัสเหตุผลการโต้แย้ง.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/รหัสเหตุผลการโต้แย้ง.md
@@ -1,7 +1,8 @@
+## รหัสเหตุผลการโต้แย้ง (Argumentative Reason Code)
+
+![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page121.png)
 
 
-
-> Written with [StackEdit](https://stackedit.io/).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzMwOTk4MTE2XX0=
+eyJoaXN0b3J5IjpbNTI4OTg5MzY3XX0=
 -->
