--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -2,6 +2,8 @@
 การปฏิบัติพิธีการศุลกากรสำหรับการนำเข้า (e-Import)
 ====
 
+![enter image description here](https://www.aseanbriefing.com/news/wp-content/uploads/2018/03/ASEAN-Briefing-Comprehensive-Progressive-Agreement-for-the-Tran-Pacific-Partnership-Way-Ahead-002.jpg)
+
 
 การนำของเข้ามาในราชอาณาจักร หมายถึง การนำของใด ๆ จากภายนอกราชอาณาจักรเข้ามาในราชอาณาจักรโดยการขนส่งทางเรือ ทางรถไฟ ทางรถยนต์ คนเดินเข้ามา ทางเครื่องบิน ทางไปรษณีย์ ทางท่อขนส่งทางบก ทางสายส่งไฟฟ้า ทางเรือที่เข้าออกด่านศุลกากรทางบก เรือเล็กทางทะเลที่เข้าออก ด่านศุลกากรทางทะเล ทางผู้โดยสารนำพาขึ้นอากาศยาน เป็นต้น
 
@@ -45,7 +47,8 @@
 [2]: https://www.facebook.com/ECS.24hr/
 [3]: http://www.customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTQ5NDIxMDExLDIwMjcxMDU5NDIsMjA4MT
-gxMzcyNSwtMTM0MzE1NjQzNywtMTgyOTMwNTk4NSw0MTc3NTIy
-MzIsLTE2OTExNzc4OTQsNTcxMDk1ODAzLDQ3NDgyMjY4M119
+eyJoaXN0b3J5IjpbLTE2MTU3MTk5MTUsLTQ5NDIxMDExLDIwMj
+cxMDU5NDIsMjA4MTgxMzcyNSwtMTM0MzE1NjQzNywtMTgyOTMw
+NTk4NSw0MTc3NTIyMzIsLTE2OTExNzc4OTQsNTcxMDk1ODAzLD
+Q3NDgyMjY4M119
 -->
