KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -1,6 +1,5 @@
- 
- ภาค 4 ของที่ได้รับยกเว้นอากร  
- =====================
+  ภาค 4 ของที่ได้รับยกเว้นอากร  
+==
  
   
 ## รายการสุทธินำกลับ ประเภทที่ 1 ภาค 4   
@@ -293,8 +292,9 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTc4OTk4MDg5NCwtMTY1ODM4NjkwMCw2Mj
-k2OTAyODQsNTk0Mzk1MTcyLDI2MTYwMjQ3OCwxOTEyMzkyMDQ2
-LC00MjUxMzE2NjIsLTI3MjQwNjcyMCwtMjA5NDMzNDk5NCwtMT
-QzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIxMzE1MV19
+eyJoaXN0b3J5IjpbLTk0NjgyMjM0OSwxNzg5OTgwODk0LC0xNj
+U4Mzg2OTAwLDYyOTY5MDI4NCw1OTQzOTUxNzIsMjYxNjAyNDc4
+LDE5MTIzOTIwNDYsLTQyNTEzMTY2MiwtMjcyNDA2NzIwLC0yMD
+k0MzM0OTk0LC0xNDMxNzAwNTQ5LC05NTE0MTI2MjMsODEwMjEz
+MTUxXX0=
 -->
