--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/การปฏิบัติพิธีการศุลกากร.md
@@ -1,5 +1,5 @@
 
-การปฏิบัติพิธีการศุลกากรสำหรับการนำเข้า (e-Import)
+คู่มือการปฏิบัติพิธีการศุลกากรทางอิเล็กทรอนิกส์ว่าด้วยกระบวนการทางศุลกากรสำหรับการนำเข้า (e-Import)
 ====
 
 ![enter image description here](https://www.aseanbriefing.com/news/wp-content/uploads/2018/03/ASEAN-Briefing-Comprehensive-Progressive-Agreement-for-the-Tran-Pacific-Partnership-Way-Ahead-002.jpg)
@@ -60,8 +60,8 @@
 [2]: https://www.facebook.com/ECS.24hr/
 [3]: http://www.customs.go.th
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE2MDA1OTg0ODgsLTQ5NDIxMDExLDIwMj
-cxMDU5NDIsMjA4MTgxMzcyNSwtMTM0MzE1NjQzNywtMTgyOTMw
-NTk4NSw0MTc3NTIyMzIsLTE2OTExNzc4OTQsNTcxMDk1ODAzLD
-Q3NDgyMjY4M119
+eyJoaXN0b3J5IjpbMjc3MDY2NTU4LC00OTQyMTAxMSwyMDI3MT
+A1OTQyLDIwODE4MTM3MjUsLTEzNDMxNTY0MzcsLTE4MjkzMDU5
+ODUsNDE3NzUyMjMyLC0xNjkxMTc3ODk0LDU3MTA5NTgwMyw0Nz
+Q4MjI2ODNdfQ==
 -->
