KnowledgeCenter/e-Customs/e-Import/e-Import-manual/เลขที่ใบตราส่ง.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/เลขที่ใบตราส่ง.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/เลขที่ใบตราส่ง.md
@@ -21,8 +21,8 @@
  |ใบขนสินค้า & Manifest|เรือ|รถไฟ|บก|อากาศ|ไปรษณีย์|ผู้โดยสารนำพา|
 |--|:--:|:--:|:--:|:--:|:--:|:--:|
 |Vessel Name|	Y|	Y|	-|	Y|	-|	-|
-|Discharge Port|Y|	Y|	Y|	Y|	Y|	Y|	Y|
-|Arrival Date|	Y|	Y|	Y|	Y|	Y|	Y|	Y|
+|Discharge Port|Y|	Y|	Y|	Y|	Y|	Y|	
+|Arrival Date|	Y|	Y|	Y|	Y|	Y|	Y|	
 |Master Bill of Lading|	-|	-|	Y|	Y|	-|	-|
 |House Bill of Lading|	Y|	Y|	Y|	Y|	Y|	Y|
 |Company English Name|	Y|	Y|	Y|	Y|	Y|	Y|
@@ -32,5 +32,5 @@
 |Gross Weight Unit(หน่วยของน้ำหนักรวม)|	=|	=|	=|	=|	=|	=|
 |Release Port|	Y|	Y|	Y|	Y|	Y|	Y|
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTc0NDE5NTIxM119
+eyJoaXN0b3J5IjpbMTk1Njc0Mjk1N119
 -->
