--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ประเภทค่าภาษี.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ประเภทค่าภาษี.md
@@ -1,6 +1,6 @@
 ## ประเภทค่าภาษีอากรที่ต้องชำระและ/หรือวางประกัน  (Duty Type)  
 
-![enter image description here](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page122.png)
+![ประเภทค่าภาษีอากร](https://github.com/yosarawut/KnowledgeCenter/raw/master/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/img/e-Import_2018png_Page122.png)
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY2MTQ2MDE0MF19
+eyJoaXN0b3J5IjpbLTUwNTgwNDczNywxNjYxNDYwMTQwXX0=
 -->
