KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
+++ b/KnowledgeCenter/e-Customs/e-Import/ระบบราคาแกตต์.md
@@ -174,7 +174,7 @@
     -   ราคาศุลกากรขั้นต่ำ หรือ
     -   ราคาที่กำหนดขึ้นเองหรือที่ไม่เป็นจริง
 
-### ==ข้อควรทราบในการสำแดงราคาศุลกากร==
+### ข้อควรทราบในการสำแดงราคาศุลกากร
 
 ผู้นำเข้าควรตรวจสอบว่า ราคาสินค้านำเข้าที่ท่านสำแดงต่อศุลกากรเป็นไปที่กำหนดไว้ในระบบราคาแกตต์หรือไม่ โดยตอบคำถามแนวทางการประเมินราคาแกตต์สำหรับผู้นำเข้า (การตรวจสอบว่าราคาสินค้าว่าเป็นไปตามราคาแกตต์หรือไม่) ดังต่อไปนี้
 
@@ -205,8 +205,8 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTUyNTkyNzU1NCw5MDQxMTY4NywxMDkzMz
-cyNzc5LDgxMzUwMDk3NSwtMzk2MTk2MzE3LDE3OTM3NjcyMzMs
-MTI1ODk2Mjg1NiwxMjU4OTYyODU2LC0xNDQ5NDAwMTcwLC03Mj
-g1ODQ0Nyw5NDk1MDE4MTZdfQ==
+eyJoaXN0b3J5IjpbLTQ2MjE5NDA0NiwxNTI1OTI3NTU0LDkwND
+ExNjg3LDEwOTMzNzI3NzksODEzNTAwOTc1LC0zOTYxOTYzMTcs
+MTc5Mzc2NzIzMywxMjU4OTYyODU2LDEyNTg5NjI4NTYsLTE0ND
+k0MDAxNzAsLTcyODU4NDQ3LDk0OTUwMTgxNl19
 -->
