KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -47,7 +47,7 @@
 
 การกำหนดค่าวางเงินประกัน **(วางประกันที่ด่านศุลกากร ไม่ต้องบันทึกในโปรแกรม)**
 
-- **_ให้วางเป็นสัญญาประกันทัณฑ์บนเพื่อการปฏิบัติพิธีการ_** 
+- **ให้วางเป็นสัญญาประกันทัณฑ์บนเพื่อการปฏิบัติพิธีการ** 
 - คำนวณจาก ค่าภาษีอากรอันพึงจะต้องชำระตามปกติ แล้วคำนวณเงินเพิ่มอีกร้อยละ 20 ของเงินภาษีอากรที่ได้ประเมินไว้ และรวมกำหนดเป็นเงินประกัน 
 
 ให้ยื่นคำร้องต่อหน่วยงานศุลกากร **ณ ด่านศุลกากร ที่นำของเข้า** โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภทที่ 3 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการนำของที่นำเข้ามาเป็นการชั่วคราว และจะต้องแสดงหลักฐานให้เป็นที่พอใจว่า นำเข้ามาใช้ประโยชน์ในกิจการตามที่ระบุไว้ ตามพิกัดอัตราศุลกากรแต่ละประเภท
@@ -61,6 +61,7 @@
 - (ช) **ของที่นำเข้ามาเพื่อซ่อม** แต่ต้องปฏิบัติภายในเงื่อนไขที่อธิบดีกรมศุลกากรกำหนด
 - (ซ) **ตัวอย่างสินค้า** นอกจากที่ระบุไว้ในประเภทที่ 14 ซึ่งบุคคลที่เข้ามาในราชอาณาจักรเป็นการชั่วคราว นำเข้ามาพร้อมกับตนและมีสภาพ ซึ่งเมื่อจะส่งกลับออกไปสามารถตรวจได้แน่นอนว่า เป็นของอันเดียวกับที่นำเข้ามา แต่ต้องมีปริมาณ หรือค่าซึ่งเมื่อรวมกันเข้าแล้วไม่เกินกว่าที่จะเห็นได้ว่าเป็นตัวอย่างตามธรรมดา
 - (ญ) **เครื่องมือ และสิ่งประกอบสำหรับงานก่อสร้าง** งานพัฒนาการ รวมทั้งกิจการชั่วคราวอย่างอื่นตามที่อธิบดีกรมศุลกากรจะเห็นสมควร โดยให้ได้รับยกเว้นเพียงเท่าเงินอากรที่จะพึงเสียในขณะนำเข้าหักด้วยจำนวนเงินอากรที่คำนวณตามระยะเวลาที่ของนั้นอยู่ในประเทศ ในอัตราร้อยละ 1 ต่อเดือนของจำนวนอากรที่จะพึงต้องเสียในขณะนำเข้า ในการคำนวณให้นับเศษของเดือนเป็น 1 เดือน และจะต้องชำระอากรก่อนส่งกลับออกไป
+
 
 
 
@@ -293,9 +294,9 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTg3ODg2Mzc0OSwtOTQ2ODIyMzQ5LDE3OD
-k5ODA4OTQsLTE2NTgzODY5MDAsNjI5NjkwMjg0LDU5NDM5NTE3
-MiwyNjE2MDI0NzgsMTkxMjM5MjA0NiwtNDI1MTMxNjYyLC0yNz
-I0MDY3MjAsLTIwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLTk1MTQx
-MjYyMyw4MTAyMTMxNTFdfQ==
+eyJoaXN0b3J5IjpbOTU1MDE2Mjg3LDE4Nzg4NjM3NDksLTk0Nj
+gyMjM0OSwxNzg5OTgwODk0LC0xNjU4Mzg2OTAwLDYyOTY5MDI4
+NCw1OTQzOTUxNzIsMjYxNjAyNDc4LDE5MTIzOTIwNDYsLTQyNT
+EzMTY2MiwtMjcyNDA2NzIwLC0yMDk0MzM0OTk0LC0xNDMxNzAw
+NTQ5LC05NTE0MTI2MjMsODEwMjEzMTUxXX0=
 -->
