--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -52,16 +52,18 @@
 
 ให้ยื่นคำร้องต่อหน่วยงานศุลกากร **ณ ด่านศุลกากร ที่นำของเข้า** โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภทที่ 3 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการนำของที่นำเข้ามาเป็นการชั่วคราว และจะต้องแสดงหลักฐานให้เป็นที่พอใจว่า นำเข้ามาใช้ประโยชน์ในกิจการตามที่ระบุไว้ ตามพิกัดอัตราศุลกากรแต่ละประเภท
 
-- (ก) **ของที่ใช้ในการแสดงละคร**หรือการแสดงอย่างอื่นที่คล้ายกัน ซึ่งผู้แสดงที่ท่องเที่ยวนำเข้ามา
-- (ข) เครื่องประกอบและของใช้ใน**การทดลอง หรือการแสดงเพื่อวิทยาศาสตร์ หรือการศึกษา** ซึ่งบุคคลที่เข้ามาในราชอาณาจักรเป็นการชั่วคราวนำเข้ามาเพื่อจัดการทดลองหรือแสดง
-- (ค) **รถสำหรับเดินบนถนน เรือและอากาศยาน** บรรดาที่เจ้าของนำเข้ามาพร้อมกับตน
-- (ง) **เครื่องถ่ายรูปและเครื่องบันทึกเสียง** ซึ่งบุคคลที่เข้ามาในราชอาณาจักรเป็นการชั่วคราวนำเข้ามาเพื่อใช้ถ่ายรูปหรือบันทึกเสียงต่างๆ แต่ฟิล์มและแผ่นสำหรับถ่ายรูปหรือสิ่งที่ใช้บันทึกเสียง ซึ่งนำมาใช้ในการนี้ ต้องเป็นไปตามเงื่อนไข และปริมาณที่รัฐมนตรีว่าการกระทรวงการคลังกำหนด 
-- (จ) **อาวุธปืนและกระสุนปืน** ซึ่งบุคคลที่เข้ามาในราชอาณาจักรเป็นการชั่วคราวนำเข้ามา  พร้อมกับตน
-- (ฉ) ของที่นำเข้ามาเป็นการชั่วคราว  โดยมุ่งหมายจะ**แสดงในงานสาธารณะที่เปิดให้ประชาชนดูได้ทั่วไป**
-- (ช) **ของที่นำเข้ามาเพื่อซ่อม** แต่ต้องปฏิบัติภายในเงื่อนไขที่อธิบดีกรมศุลกากรกำหนด
-- (ซ) **ตัวอย่างสินค้า** นอกจากที่ระบุไว้ในประเภทที่ 14 ซึ่งบุคคลที่เข้ามาในราชอาณาจักรเป็นการชั่วคราว นำเข้ามาพร้อมกับตนและมีสภาพ ซึ่งเมื่อจะส่งกลับออกไปสามารถตรวจได้แน่นอนว่า เป็นของอันเดียวกับที่นำเข้ามา แต่ต้องมีปริมาณ หรือค่าซึ่งเมื่อรวมกันเข้าแล้วไม่เกินกว่าที่จะเห็นได้ว่าเป็นตัวอย่างตามธรรมดา
-- (ญ) **เครื่องมือ และสิ่งประกอบสำหรับงานก่อสร้าง** งานพัฒนาการ รวมทั้งกิจการชั่วคราวอย่างอื่นตามที่อธิบดีกรมศุลกากรจะเห็นสมควร โดยให้ได้รับยกเว้นเพียงเท่าเงินอากรที่จะพึงเสียในขณะนำเข้าหักด้วยจำนวนเงินอากรที่คำนวณตามระยะเวลาที่ของนั้นอยู่ในประเทศ ในอัตราร้อยละ 1 ต่อเดือนของจำนวนอากรที่จะพึงต้องเสียในขณะนำเข้า ในการคำนวณให้นับเศษของเดือนเป็น 1 เดือน และจะต้องชำระอากรก่อนส่งกลับออกไป
 
+| ประเภท| รายละเอียดทัณฑ์บนชั่วคราว |
+|:-------:|:--------------------------------------------------------------------------|
+| **(ก)** | ของที่ใช้ในการแสดงละครหรือการแสดงอย่างอื่นที่คล้ายกัน ซึ่งผู้แสดงที่ท่องเที่ยวนำเข้ามา| 
+| **(ข)** | เครื่องประกอบและของใช้ในการทดลอง หรือการแสดงเพื่อวิทยาศาสตร์ หรือการศึกษา ซึ่งบุคคลที่เข้ามาในราชอาณาจักรเป็นการชั่วคราวนำเข้ามาเพื่อจัดการทดลองหรือแสดง| 
+| **(ค)**|รถสำหรับเดินบนถนน เรือและอากาศยาน บรรดาที่เจ้าของนำเข้ามาพร้อมกับตน| 
+|**(ง)**|  เครื่องถ่ายรูปและเครื่องบันทึกเสียง ซึ่งบุคคลที่เข้ามาในราชอาณาจักรเป็นการชั่วคราวนำเข้ามาเพื่อใช้ถ่ายรูปหรือบันทึกเสียงต่างๆ แต่ฟิล์มและแผ่นสำหรับถ่ายรูปหรือสิ่งที่ใช้บันทึกเสียง ซึ่งนำมาใช้ในการนี้ ต้องเป็นไปตามเงื่อนไข และปริมาณที่รัฐมนตรีว่าการกระทรวงการคลังกำหนด | 
+| **(จ)**|  อาวุธปืนและกระสุนปืน ซึ่งบุคคลที่เข้ามาในราชอาณาจักรเป็นการชั่วคราวนำเข้ามา  พร้อมกับตน| 
+| **(ฉ)** | ของที่นำเข้ามาเป็นการชั่วคราว  โดยมุ่งหมายจะแสดงในงานสาธารณะที่เปิดให้ประชาชนดูได้ทั่วไป| 
+| **(ช)** | ของที่นำเข้ามาเพื่อซ่อม แต่ต้องปฏิบัติภายในเงื่อนไขที่อธิบดีกรมศุลกากรกำหนด| 
+| **(ซ)** | ตัวอย่างสินค้า นอกจากที่ระบุไว้ในประเภทที่ 14 ซึ่งบุคคลที่เข้ามาในราชอาณาจักรเป็นการชั่วคราว นำเข้ามาพร้อมกับตนและมีสภาพ ซึ่งเมื่อจะส่งกลับออกไปสามารถตรวจได้แน่นอนว่า เป็นของอันเดียวกับที่นำเข้ามา แต่ต้องมีปริมาณ หรือค่าซึ่งเมื่อรวมกันเข้าแล้วไม่เกินกว่าที่จะเห็นได้ว่าเป็นตัวอย่างตามธรรมดา| 
+| **(ญ)**|  เครื่องมือ และสิ่งประกอบสำหรับงานก่อสร้าง งานพัฒนาการ รวมทั้งกิจการชั่วคราวอย่างอื่นตามที่อธิบดีกรมศุลกากรจะเห็นสมควร โดยให้ได้รับยกเว้นเพียงเท่าเงินอากรที่จะพึงเสียในขณะนำเข้าหักด้วยจำนวนเงินอากรที่คำนวณตามระยะเวลาที่ของนั้นอยู่ในประเทศ ในอัตราร้อยละ 1 ต่อเดือนของจำนวนอากรที่จะพึงต้องเสียในขณะนำเข้า ในการคำนวณให้นับเศษของเดือนเป็น 1 เดือน และจะต้องชำระอากรก่อนส่งกลับออกไป| 
 
 
 
@@ -294,9 +296,10 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbOTU1MDE2Mjg3LDE4Nzg4NjM3NDksLTk0Nj
-gyMjM0OSwxNzg5OTgwODk0LC0xNjU4Mzg2OTAwLDYyOTY5MDI4
-NCw1OTQzOTUxNzIsMjYxNjAyNDc4LDE5MTIzOTIwNDYsLTQyNT
-EzMTY2MiwtMjcyNDA2NzIwLC0yMDk0MzM0OTk0LC0xNDMxNzAw
-NTQ5LC05NTE0MTI2MjMsODEwMjEzMTUxXX0=
+eyJoaXN0b3J5IjpbLTE3MjIyMjQxOTksOTU1MDE2Mjg3LDE4Nz
+g4NjM3NDksLTk0NjgyMjM0OSwxNzg5OTgwODk0LC0xNjU4Mzg2
+OTAwLDYyOTY5MDI4NCw1OTQzOTUxNzIsMjYxNjAyNDc4LDE5MT
+IzOTIwNDYsLTQyNTEzMTY2MiwtMjcyNDA2NzIwLC0yMDk0MzM0
+OTk0LC0xNDMxNzAwNTQ5LC05NTE0MTI2MjMsODEwMjEzMTUxXX
+0=
 -->
