KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/โครงสร้่างข้อมูล.md
@@ -21,14 +21,14 @@
 	- สำหรับ Field ที่เป็น Numeric (แสดงออกเป็นตัวเลข) ให้ระบุค่าเป็น 0 (ศูนย์)
 	
 ## อักษรย่อ ที่ใช้ในการอธิบายรูปแบบชนิดของข้อมูล
-|อักษรย่อ   |	คำอธิบาย  |
-|:---------------|:------------------------------------------------------|
-|n3 |	ข้อมูลชนิดตัวเลข (Numeric Characters) คงที่ คือ 3 ตัวอักษร|
-|a3|	ข้อมูลชนิดตัวอักษร (Alphabetic Characters) คงที่ คือ 3 ตัวอักษร|
-|an3|	ข้อมูลชนิดตัวอักษรหรือตัวเลข คงที่ คือ 3 ตัวอักษร|
+|  อักษรย่อ   |	คำอธิบาย  |
+|:------------:|----------------------------|
+|n3 |ข้อมูลชนิดตัวเลข (Numeric Characters) คงที่ คือ 3 ตัวอักษร|
+|a3  |	ข้อมูลชนิดตัวอักษร (Alphabetic Characters) คงที่ คือ 3 ตัวอักษร|
+|an3  |	ข้อมูลชนิดตัวอักษรหรือตัวเลข คงที่ คือ 3 ตัวอักษร|
 |n..3|	ข้อมูลชนิดตัวเลขความยาวข้อมูลแปรผันตามความยาวสูงสุด 3 ตัวอักษร|
 |a..3|	ข้อมูลชนิดตัวอักษรความยาวข้อมูลแปรผันตามความยาวสูงสุด 3 ตัวอักษร|
-|an..3|	ข้อมูลชนิดตัวอักษรหรือตัวเลขความยาวข้อมูลแปรผันตามความยาวสูงสุด 3 ตัวอักษร|
+|an..3  |	ข้อมูลชนิดตัวอักษรหรือตัวเลขความยาวข้อมูลแปรผันตามความยาวสูงสุด 3 ตัวอักษร|
 |n..16,2|ข้อมูลชนิดตัวเลขความยาวข้อมูลแปรผันตามความยาวสูงสุด 16 ตัวอักษรรวมความยาวทศนิยมสูงสุด 2 ตัวอักษร|
 
 
@@ -133,8 +133,8 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTMzOTU0MzQ0MSwxMDA5NzQ3ODc2LDExND
-E3NzM0MjUsMTc2OTcwODYxMiwxOTMzMjQwODUsLTIwODEwNzYz
-MSwtNjk0NzYzMzM5LC00OTAzNTg5MTksLTIxMDU4ODc5NTBdfQ
-==
+eyJoaXN0b3J5IjpbLTI2MTAxMzY1OCwxMzM5NTQzNDQxLDEwMD
+k3NDc4NzYsMTE0MTc3MzQyNSwxNzY5NzA4NjEyLDE5MzMyNDA4
+NSwtMjA4MTA3NjMxLC02OTQ3NjMzMzksLTQ5MDM1ODkxOSwtMj
+EwNTg4Nzk1MF19
 -->
