KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -69,9 +69,9 @@
 
 ## สิทธิของใช้ส่วนตัว (ของส่วนตัว) ประเภทที่ 5 ภาค 4 
 
-ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **เว้นแต่ รถยนต์ อาวุธปืนและกระสุนปืน และเสบียง**
-
-**สุรา หรือ CIGARETTE หรือ CIGAR หรือยาเส้น** ซึ่งเป็นของส่วนตัวที่ผู้เดินทางนำเข้ามาพร้อมกับตนนั้น ยกเว้นอากรให้ได้ แต่ต้องไม่เกินปริมาณ ดังนี้
+ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **เว้นแต่ 
+- รถยนต์ อาวุธปืนและกระสุนปืน และเสบียง**
+- **สุรา หรือ CIGARETTE หรือ CIGAR หรือยาเส้น** ซึ่งเป็นของส่วนตัวที่ผู้เดินทางนำเข้ามาพร้อมกับตนนั้น ยกเว้นอากรให้ได้ แต่ต้องไม่เกินปริมาณ ดังนี้
 
 -  **CIGARETTE 200 มวน หรือ CIGAR หรือยาเส้น อย่างละ 250 กรัม หรือหลายชนิดรวมกันมีน้ำหนัก ทั้งหมด 250 กรัม แต่ทั้งนี้ CIGARETTE ต้องไม่เกิน 200 มวน**
 -  **สุรา 1 ลิตร**   
@@ -296,9 +296,10 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbODE0NjA1ODgxLDk1NTAxNjI4NywxODc4OD
-YzNzQ5LC05NDY4MjIzNDksMTc4OTk4MDg5NCwtMTY1ODM4Njkw
-MCw2Mjk2OTAyODQsNTk0Mzk1MTcyLDI2MTYwMjQ3OCwxOTEyMz
-kyMDQ2LC00MjUxMzE2NjIsLTI3MjQwNjcyMCwtMjA5NDMzNDk5
-NCwtMTQzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIxMzE1MV19
+eyJoaXN0b3J5IjpbLTI5NzYzMTc1NSw4MTQ2MDU4ODEsOTU1MD
+E2Mjg3LDE4Nzg4NjM3NDksLTk0NjgyMjM0OSwxNzg5OTgwODk0
+LC0xNjU4Mzg2OTAwLDYyOTY5MDI4NCw1OTQzOTUxNzIsMjYxNj
+AyNDc4LDE5MTIzOTIwNDYsLTQyNTEzMTY2MiwtMjcyNDA2NzIw
+LC0yMDk0MzM0OTk0LC0xNDMxNzAwNTQ5LC05NTE0MTI2MjMsOD
+EwMjEzMTUxXX0=
 -->
