--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -69,14 +69,15 @@
 
 ## สิทธิของใช้ส่วนตัว (ของส่วนตัว) ประเภทที่ 5 ภาค 4 
 
-ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **เว้นแต่ 
+1. ของส่วนตัว ที่เจ้าของนำเข้ามาพร้อมกับตนสำหรับใช้เองหรือใช้ในวิชาชีพ และมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร **เว้นแต่ 
 - รถยนต์ อาวุธปืนและกระสุนปืน และเสบียง**
 - **สุรา หรือ CIGARETTE หรือ CIGAR หรือยาเส้น** ซึ่งเป็นของส่วนตัวที่ผู้เดินทางนำเข้ามาพร้อมกับตนนั้น ยกเว้นอากรให้ได้ แต่ต้องไม่เกินปริมาณ ดังนี้
 
 -  **CIGARETTE 200 มวน หรือ CIGAR หรือยาเส้น อย่างละ 250 กรัม หรือหลายชนิดรวมกันมีน้ำหนัก ทั้งหมด 250 กรัม แต่ทั้งนี้ CIGARETTE ต้องไม่เกิน 200 มวน**
 -  **สุรา 1 ลิตร**   
-
-ของส่วนตัวตามประเภทที่ 5 จะต้อง**นำเข้ามาถึงประเทศไทยไม่เกิน 1 เดือน**ก่อนที่ผู้นำของเข้ามาถึง หรือ**ไม่เกิน 6 เดือนนับแต่วันที่ผู้นำของเข้าเข้ามาถึง** ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้
+2. ของส่วนตัวตามประเภทที่ 5 จะต้องนำเข้ามาถึงประเทศไทยไม่เกิน 1 เดือนก่อนที่ผู้นำของเข้ามาถึง หรือไม่เกิน 6 เดือนนับแต่วันที่ผู้นำของเข้าเข้ามาถึง อธิบดีกรมศุลกากรมีอำนาจขยายกำหนดเวลาที่กล่าวข้างต้นได้ เมื่อเห็นว่ามีพฤติการณ์พิเศษ
+3. บุคคลซึ่งจะได้รับการพิจารณายกเว้นอากรของใช้ส่วนตัว ประเภทที่ 5 ภาค 4 ได้แก่ คนต่างด้าว หรือคนไทยที่เดินทางไปมาระหว่างประเทศไม่ว่าจะเป็นการชั่วคราว หรือเป็นการย้ายภูมิลำเนาแต่สิ่งของนั้นจะต้องมีจำนวนพอสมควรแก่ฐานะของบุคคลนั้นๆ ถ้ามีจำนวนมากมายเกินสมควร ก็จะยกเว้นค่าอากรให้ไม่ได้ จะต้องพิจารณาตามความเหมาะสมแก่ฐานะของบุคคลเป็นรายๆ ไป
+4.  ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้
 
  - การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า 
  - ระบุ Import Tariff = **5PART4** (ของส่วนตัวที่เจ้าของนำเข้ามาพร้อมกับตน)
@@ -296,7 +297,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTI5NzYzMTc1NSw4MTQ2MDU4ODEsOTU1MD
+eyJoaXN0b3J5IjpbMTY3OTYyMDk3Niw4MTQ2MDU4ODEsOTU1MD
 E2Mjg3LDE4Nzg4NjM3NDksLTk0NjgyMjM0OSwxNzg5OTgwODk0
 LC0xNjU4Mzg2OTAwLDYyOTY5MDI4NCw1OTQzOTUxNzIsMjYxNj
 AyNDc4LDE5MTIzOTIwNDYsLTQyNTEzMTY2MiwtMjcyNDA2NzIw
