KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -85,7 +85,8 @@
  - อัตราอากร ใช้ Tariff Code และ Tariff Sequence 
  - อากร ยกเว้น (บันทึก Exemption Rate = 100%)
  - VAT ยกเว้น (บันทึก Exemption Rate = 100%)
-
+5. ให้ยื่นคำร้องต่อหน่วยงานศุลกากร ณ ด่านศุลกากร ที่นำของเข้า โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภท 5 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการยกเว้นอากรของใช้ส่วนตัว 
+6. 
 
 ## สิทธิของใช้ส่วนตัว (ของใช้ในบ้านเรือนที่ใช้แล้ว) ประเภทที่ 6 ภาค 4 
 
@@ -297,10 +298,10 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTY3OTYyMDk3Niw4MTQ2MDU4ODEsOTU1MD
-E2Mjg3LDE4Nzg4NjM3NDksLTk0NjgyMjM0OSwxNzg5OTgwODk0
-LC0xNjU4Mzg2OTAwLDYyOTY5MDI4NCw1OTQzOTUxNzIsMjYxNj
-AyNDc4LDE5MTIzOTIwNDYsLTQyNTEzMTY2MiwtMjcyNDA2NzIw
-LC0yMDk0MzM0OTk0LC0xNDMxNzAwNTQ5LC05NTE0MTI2MjMsOD
-EwMjEzMTUxXX0=
+eyJoaXN0b3J5IjpbLTkxODI3ODYzMiwxNjc5NjIwOTc2LDgxND
+YwNTg4MSw5NTUwMTYyODcsMTg3ODg2Mzc0OSwtOTQ2ODIyMzQ5
+LDE3ODk5ODA4OTQsLTE2NTgzODY5MDAsNjI5NjkwMjg0LDU5ND
+M5NTE3MiwyNjE2MDI0NzgsMTkxMjM5MjA0NiwtNDI1MTMxNjYy
+LC0yNzI0MDY3MjAsLTIwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLT
+k1MTQxMjYyMyw4MTAyMTMxNTFdfQ==
 -->
