KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -86,7 +86,12 @@
  - อากร ยกเว้น (บันทึก Exemption Rate = 100%)
  - VAT ยกเว้น (บันทึก Exemption Rate = 100%)
 5. ให้ยื่นคำร้องต่อหน่วยงานศุลกากร ณ ด่านศุลกากร ที่นำของเข้า โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภท 5 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการยกเว้นอากรของใช้ส่วนตัว 
-6. 
+6. การยกเว้นอากรของส่วนตัวที่ผู้โดยสารนำเข้ามาพร้อมกับตน ตามพิกัดประเภทที่ 5 ภาค 4 ไม่ต้องจัดทำใบขนสินค้าขาเข้า กรณี
+	- ของส่วนตัวที่ผู้โดยสารถือติดตัวเข้ามาพร้อมกับตน (ACCOMPANIED BAGGAGE) จากต่างประเทศทางอากาศยาน มีราคาไม่เกิน 20,000 บาท ให้ได้รับยกเว้นอากร ทั้งนี้ ไม่รวมถึงของที่นำติดตัวเข้ามา แต่มีลักษณะเป็นสินค้าในเชิงการค้า แม้ราคาไม่เกิน 20,000 บาท ก็ตาม 
+	- สุรา หรือ CIGARETTE หรือ CIGAR หรือยาเส้น ซึ่งเป็นของส่วนตัวที่ผู้โดยสารถือติดตัวเข้ามาพร้อมกับตนให้ได้รับยกเว้นอากรต่อเมื่อไม่เกินปริมาณ ดังต่อไปนี้ 
+		* CIGARETTE 200 มวน หรือ CIGAR หรือยาเส้น อย่างละ 250 กรัม หรือ
+หลายชนิดรวมกันมีน้ำหนักทั้งหมด 250 กรัม แต่ทั้งนี้ CIGARETTE ต้องไม่เกิน 200 มวน 
+
 
 ## สิทธิของใช้ส่วนตัว (ของใช้ในบ้านเรือนที่ใช้แล้ว) ประเภทที่ 6 ภาค 4 
 
@@ -298,7 +303,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTkxODI3ODYzMiwxNjc5NjIwOTc2LDgxND
+eyJoaXN0b3J5IjpbMTEyNzUyODQzNiwxNjc5NjIwOTc2LDgxND
 YwNTg4MSw5NTUwMTYyODcsMTg3ODg2Mzc0OSwtOTQ2ODIyMzQ5
 LDE3ODk5ODA4OTQsLTE2NTgzODY5MDAsNjI5NjkwMjg0LDU5ND
 M5NTE3MiwyNjE2MDI0NzgsMTkxMjM5MjA0NiwtNDI1MTMxNjYy
