KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -89,8 +89,8 @@
 6. การยกเว้นอากรของส่วนตัวที่ผู้โดยสารนำเข้ามาพร้อมกับตน ตามพิกัดประเภทที่ 5 ภาค 4 ไม่ต้องจัดทำใบขนสินค้าขาเข้า กรณี
 	- ของส่วนตัวที่ผู้โดยสารถือติดตัวเข้ามาพร้อมกับตน (ACCOMPANIED BAGGAGE) จากต่างประเทศทางอากาศยาน มีราคาไม่เกิน 20,000 บาท ให้ได้รับยกเว้นอากร ทั้งนี้ ไม่รวมถึงของที่นำติดตัวเข้ามา แต่มีลักษณะเป็นสินค้าในเชิงการค้า แม้ราคาไม่เกิน 20,000 บาท ก็ตาม 
 	- สุรา หรือ CIGARETTE หรือ CIGAR หรือยาเส้น ซึ่งเป็นของส่วนตัวที่ผู้โดยสารถือติดตัวเข้ามาพร้อมกับตนให้ได้รับยกเว้นอากรต่อเมื่อไม่เกินปริมาณ ดังต่อไปนี้ 
-		* CIGARETTE 200 มวน หรือ CIGAR หรือยาเส้น อย่างละ 250 กรัม หรือ
-หลายชนิดรวมกันมีน้ำหนักทั้งหมด 250 กรัม แต่ทั้งนี้ CIGARETTE ต้องไม่เกิน 200 มวน 
+		* CIGARETTE 200 มวน หรือ CIGAR หรือยาเส้น อย่างละ 250 กรัม หรือ หลายชนิดรวมกันมีน้ำหนักทั้งหมด 250 กรัม แต่ทั้งนี้ CIGARETTE ต้องไม่เกิน 200 มวน 
+		* สุรา 1 ลิตร
 
 
 ## สิทธิของใช้ส่วนตัว (ของใช้ในบ้านเรือนที่ใช้แล้ว) ประเภทที่ 6 ภาค 4 
@@ -303,10 +303,10 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTEyNzUyODQzNiwxNjc5NjIwOTc2LDgxND
-YwNTg4MSw5NTUwMTYyODcsMTg3ODg2Mzc0OSwtOTQ2ODIyMzQ5
-LDE3ODk5ODA4OTQsLTE2NTgzODY5MDAsNjI5NjkwMjg0LDU5ND
-M5NTE3MiwyNjE2MDI0NzgsMTkxMjM5MjA0NiwtNDI1MTMxNjYy
-LC0yNzI0MDY3MjAsLTIwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLT
-k1MTQxMjYyMyw4MTAyMTMxNTFdfQ==
+eyJoaXN0b3J5IjpbLTExMzEyMDU0OTksMTY3OTYyMDk3Niw4MT
+Q2MDU4ODEsOTU1MDE2Mjg3LDE4Nzg4NjM3NDksLTk0NjgyMjM0
+OSwxNzg5OTgwODk0LC0xNjU4Mzg2OTAwLDYyOTY5MDI4NCw1OT
+QzOTUxNzIsMjYxNjAyNDc4LDE5MTIzOTIwNDYsLTQyNTEzMTY2
+MiwtMjcyNDA2NzIwLC0yMDk0MzM0OTk0LC0xNDMxNzAwNTQ5LC
+05NTE0MTI2MjMsODEwMjEzMTUxXX0=
 -->
