--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -94,6 +94,32 @@
 
 ## สิทธิของใช้ส่วนตัว (ของใช้ในบ้านเรือนที่ใช้แล้ว) ประเภทที่ 6 ภาค 4 
 
+1. ของใช้ในบ้านเรือนที่ใช้แล้ว ที่เจ้าของนำเข้ามาพร้อมกับตน เนื่องในการย้ายภูมิลำเนาและมีจำนวนพอสมควรแก่ฐานะ ได้รับยกเว้นอากร 
+2. ของใช้ในบ้านเรือนตามประเภทที่ 6 จะต้องนำเข้ามาถึงประเทศไทยไม่เกิน 1 เดือนก่อนที่ ผู้นำของเข้ามาถึง หรือไม่เกิน 6 เดือนนับแต่วันที่ผู้นำของเข้าเข้ามาถึง อธิบดีกรมศุลกากรมีอำนาจขยายกำหนดเวลาที่กล่าวข้างต้นได้ เมื่อเห็นว่ามีพฤติการณ์พิเศษ
+3. บุคคลที่ได้รับยกเว้นอากรของใช้ในบ้านเรือนตามประเภทที่ 6 ภาค 4 
+	- ชาวต่างประเทศที่ย้ายภูมิลำเนาเข้ามาอยู่ในราชอาณาจักร ต้องเป็นผู้ได้รับโควต้าเข้าเมืองตามที่ปรากฏในหนังสือเดินทาง หรือใบประจำตัวคนต่างด้าว
+	- ชาวต่างประเทศที่ได้รับอนุญาตให้เข้ามาประกอบอาชีพในราชอาณาจักร จะได้รับ
+การอนุโลมให้ถือว่าย้ายภูมิลำเนาต้องได้รับอนุญาตจากสำนักงานตรวจคนเข้าเมืองว่า บุคคลผู้นี้จะให้อยู่ได้ไม่ต่ำกว่า 1 ปี กรณีที่ยังไม่ได้รับอนุญาตแต่เป็นเรื่องรีบด่วนต้องยื่นเอกสารอย่างใดอย่างหนึ่งประกอบการพิจารณา คือ หนังสือสำนักงานตรวจคนเข้าเมืองรับรองว่าจะได้รับอนุญาตให้อยู่ชั่วคราวเป็นปี ๆ ไป หรือหนังสืออนุญาตของ
+กรมแรงงานว่า ได้รับอนุญาตให้ประกอบอาชีพในประเทศแล้วไม่น้อยกว่า 1 ปี
+(ค) คนต่างด้าวที่เข้ามาในฐานะผู้เชี่ยวชาญ ผู้ชำนาญการพิเศษ หรือภายใต้สัญญาจ้าง
+ของหน่วยราชการ ต้องมีหนังสือของหน่วยราชการนั้น ๆ รับรองว่า บุคคลผู้นั้นได้รับอนุญาตจากสำนักงาน
+ตรวจคนเข้าเมืองให้อยู่ในประเทศในประเภท NON IMMIGRANT แล้ว และจะอยู่ปฏิบัติงานไม่น้อยกว่า 1 ปี
+(ง) กรณีชาวต่างประเทศที่ย้ายภูมิลำเนาตามสามีหรือภรรยา ตาม (ข) และ (ค) ถ้าปรากฏว่าสามีหรือภรรยานั้น ได้รับอนุญาตให้อยู่ในประเทศไทยไม่น้อยกว่า 1 ปีแล้ว หากสำนักงานตรวจคนเข้าเมืองได้อนุญาตให้อยู่ครั้งแรก 90 วัน ก็ให้อนุโลมว่าย้ายภูมิลำเนา
+(จ) คนไทยหรือข้าราชการไทยที่ไปทำงาน หรือดำรงตำแหน่งในต่างประเทศหรือดูงานในต่างประเทศต้องอยู่ประจำเป็นเวลาไม่น้อยกว่า 1 ปี กรณีที่ต้องเดินทางกลับก่อนกำหนด 1 ปี  ต้องมีหลักฐาน
+มาแสดงว่าได้เดินทางกลับเนื่องจากสิ้นสุดสัญญาการจ้าง หรือได้รับคำสั่งให้ย้ายกลับมาปฏิบัติหน้าที่ในราชอาณาจักร หรือเสร็จสิ้นการดูงานก่อนกำหนด
+(ฉ) คนไทยที่ไปอยู่ประจำในต่างประเทศในกรณีอื่นเป็นระยะเวลาไม่น้อยกว่า 1 ปี ต้องให้คำรับรองต่อพนักงานเจ้าหน้าที่ว่าจะกลับเข้ามามีภูมิลำเนาในประเทศไทย
+(4) ของใช้ในบ้านเรือนจะยกเว้นอากรตามประเภทที่ 6 ภาค 4 ให้ได้เท่าที่เป็นจำนวนพอสมควร  เช่น ตู้เย็น เครื่องรับโทรทัศน์ วิทยุ จะยกเว้นให้เพียง 1 เครื่อง ถ้ามีมากกว่า 1 เครื่อง จะยกเว้นอากรให้เพียง 1 เครื่องเท่านั้น  และเครื่องที่ยกเว้นค่าอากรให้นั้นต้องเป็นเครื่องที่มีค่าอากรต่ำสุด 
+(5) ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้
+–	การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า 
+–	ระบุ Import Tariff = 6PART4 (ของใช้ในบ้านเรือนที่ใช้แล้ว ที่เจ้าของนำเข้ามาพร้อมกับตนเนื่องในการย้ายภูมิลำเนา)
+–	ระบุ Privilege Code = ตามสิทธิ ณ ขณะนำเข้า 
+–	อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
+–	อากร ยกเว้น (บันทึก Exemption Rate = 100%)
+–	VAT ยกเว้น (บันทึก Exemption Rate = 100%)
+ (6) ให้ยื่นคำร้องต่อหน่วยงานศุลกากร ณ ด่านศุลกากร ที่นำของเข้า โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภท 6 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการยกเว้นอากรของใช้ในบ้านเรือน 
+ 
+
+
 **ของใช้ในบ้านเรือนที่ใช้แล้ว ที่เจ้าของนำเข้ามาพร้อมกับตน เนื่องในการย้ายภูมิลำเนาและมีจำนวนพอสมควรแก่ฐานะ** ได้รับยกเว้นอากร ของใช้ในบ้านเรือนตามประเภทที่ 6 จะต้องนำเข้ามาถึงประเทศไทยไม่เกิน 1 เดือนก่อนที่ผู้นำของเข้ามาถึง หรือไม่เกิน 6 เดือนนับแต่วันที่ผู้นำของเข้าเข้ามาถึง ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้
 
 - การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า 
@@ -302,10 +328,11 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTE5MjAxNjAxNjUsLTExMzEyMDU0OTksMT
-Y3OTYyMDk3Niw4MTQ2MDU4ODEsOTU1MDE2Mjg3LDE4Nzg4NjM3
-NDksLTk0NjgyMjM0OSwxNzg5OTgwODk0LC0xNjU4Mzg2OTAwLD
-YyOTY5MDI4NCw1OTQzOTUxNzIsMjYxNjAyNDc4LDE5MTIzOTIw
-NDYsLTQyNTEzMTY2MiwtMjcyNDA2NzIwLC0yMDk0MzM0OTk0LC
-0xNDMxNzAwNTQ5LC05NTE0MTI2MjMsODEwMjEzMTUxXX0=
+eyJoaXN0b3J5IjpbMTA1NjI4MDI2LC0xOTIwMTYwMTY1LC0xMT
+MxMjA1NDk5LDE2Nzk2MjA5NzYsODE0NjA1ODgxLDk1NTAxNjI4
+NywxODc4ODYzNzQ5LC05NDY4MjIzNDksMTc4OTk4MDg5NCwtMT
+Y1ODM4NjkwMCw2Mjk2OTAyODQsNTk0Mzk1MTcyLDI2MTYwMjQ3
+OCwxOTEyMzkyMDQ2LC00MjUxMzE2NjIsLTI3MjQwNjcyMCwtMj
+A5NDMzNDk5NCwtMTQzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIx
+MzE1MV19
 -->
