--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -105,14 +105,14 @@
 มาแสดงว่าได้เดินทางกลับเนื่องจากสิ้นสุดสัญญาการจ้าง หรือได้รับคำสั่งให้ย้ายกลับมาปฏิบัติหน้าที่ในราชอาณาจักร หรือเสร็จสิ้นการดูงานก่อนกำหนด
 	- คนไทยที่ไปอยู่ประจำในต่างประเทศในกรณีอื่นเป็นระยะเวลาไม่น้อยกว่า 1 ปี ต้องให้คำรับรองต่อพนักงานเจ้าหน้าที่ว่าจะกลับเข้ามามีภูมิลำเนาในประเทศไทย
 4. ของใช้ในบ้านเรือนจะยกเว้นอากรตามประเภทที่ 6 ภาค 4 ให้ได้เท่าที่เป็นจำนวนพอสมควร  เช่น ตู้เย็น เครื่องรับโทรทัศน์ วิทยุ จะยกเว้นให้เพียง 1 เครื่อง ถ้ามีมากกว่า 1 เครื่อง จะยกเว้นอากรให้เพียง 1 เครื่องเท่านั้น  และเครื่องที่ยกเว้นค่าอากรให้นั้นต้องเป็นเครื่องที่มีค่าอากรต่ำสุด 
-(5) ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้
-–	การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า 
-–	ระบุ Import Tariff = 6PART4 (ของใช้ในบ้านเรือนที่ใช้แล้ว ที่เจ้าของนำเข้ามาพร้อมกับตนเนื่องในการย้ายภูมิลำเนา)
-–	ระบุ Privilege Code = ตามสิทธิ ณ ขณะนำเข้า 
-–	อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
-–	อากร ยกเว้น (บันทึก Exemption Rate = 100%)
-–	VAT ยกเว้น (บันทึก Exemption Rate = 100%)
- (6) ให้ยื่นคำร้องต่อหน่วยงานศุลกากร ณ ด่านศุลกากร ที่นำของเข้า โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภท 6 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการยกเว้นอากรของใช้ในบ้านเรือน 
+5. ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้
+	- การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า 
+	- ระบุ Import Tariff = 6PART4 (ของใช้ในบ้านเรือนที่ใช้แล้ว ที่เจ้าของนำเข้ามาพร้อมกับตนเนื่องในการย้ายภูมิลำเนา)
+	- ระบุ Privilege Code = ตามสิทธิ ณ ขณะนำเข้า 
+	- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
+	- อากร ยกเว้น (บันทึก Exemption Rate = 100%)
+	- VAT ยกเว้น (บันทึก Exemption Rate = 100%)
+ให้ยื่นคำร้องต่อหน่วยงานศุลกากร ณ ด่านศุลกากร ที่นำของเข้า โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภท 6 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการยกเว้นอากรของใช้ในบ้านเรือน 
  
 
 
@@ -324,7 +324,7 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNzk0NjU1NTMxLC0xOTIwMTYwMTY1LC0xMT
+eyJoaXN0b3J5IjpbNjM0ODAzMzY3LC0xOTIwMTYwMTY1LC0xMT
 MxMjA1NDk5LDE2Nzk2MjA5NzYsODE0NjA1ODgxLDk1NTAxNjI4
 NywxODc4ODYzNzQ5LC05NDY4MjIzNDksMTc4OTk4MDg5NCwtMT
 Y1ODM4NjkwMCw2Mjk2OTAyODQsNTk0Mzk1MTcyLDI2MTYwMjQ3
