KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -101,8 +101,7 @@
 	- ชาวต่างประเทศที่ได้รับอนุญาตให้เข้ามาประกอบอาชีพในราชอาณาจักร จะได้รับการอนุโลมให้ถือว่าย้ายภูมิลำเนาต้องได้รับอนุญาตจากสำนักงานตรวจคนเข้าเมืองว่า บุคคลผู้นี้จะให้อยู่ได้ไม่ต่ำกว่า 1 ปี กรณีที่ยังไม่ได้รับอนุญาตแต่เป็นเรื่องรีบด่วนต้องยื่นเอกสารอย่างใดอย่างหนึ่งประกอบการพิจารณา คือ หนังสือสำนักงานตรวจคนเข้าเมืองรับรองว่าจะได้รับอนุญาตให้อยู่ชั่วคราวเป็นปี ๆ ไป หรือหนังสืออนุญาตของกรมแรงงานว่า ได้รับอนุญาตให้ประกอบอาชีพในประเทศแล้วไม่น้อยกว่า 1 ปี
 	- คนต่างด้าวที่เข้ามาในฐานะผู้เชี่ยวชาญ ผู้ชำนาญการพิเศษ หรือภายใต้สัญญาจ้างของหน่วยราชการ ต้องมีหนังสือของหน่วยราชการนั้น ๆ รับรองว่า บุคคลผู้นั้นได้รับอนุญาตจากสำนักงานตรวจคนเข้าเมืองให้อยู่ในประเทศในประเภท NON IMMIGRANT แล้ว และจะอยู่ปฏิบัติงานไม่น้อยกว่า 1 ปี
 	- กรณีชาวต่างประเทศที่ย้ายภูมิลำเนาตามสามีหรือภรรยา ตาม (ข) และ (ค) ถ้าปรากฏว่าสามีหรือภรรยานั้น ได้รับอนุญาตให้อยู่ในประเทศไทยไม่น้อยกว่า 1 ปีแล้ว หากสำนักงานตรวจคนเข้าเมืองได้อนุญาตให้อยู่ครั้งแรก 90 วัน ก็ให้อนุโลมว่าย้ายภูมิลำเนา
--	คนไทยหรือข้าราชการไทยที่ไปทำงาน หรือดำรงตำแหน่งในต่างประเทศหรือดูงานในต่างประเทศต้องอยู่ประจำเป็นเวลาไม่น้อยกว่า 1 ปี กรณีที่ต้องเดินทางกลับก่อนกำหนด 1 ปี  ต้องมีหลักฐาน
-มาแสดงว่าได้เดินทางกลับเนื่องจากสิ้นสุดสัญญาการจ้าง หรือได้รับคำสั่งให้ย้ายกลับมาปฏิบัติหน้าที่ในราชอาณาจักร หรือเสร็จสิ้นการดูงานก่อนกำหนด
+	- คนไทยหรือข้าราชการไทยที่ไปทำงาน หรือดำรงตำแหน่งในต่างประเทศหรือดูงานในต่างประเทศต้องอยู่ประจำเป็นเวลาไม่น้อยกว่า 1 ปี กรณีที่ต้องเดินทางกลับก่อนกำหนด 1 ปี  ต้องมีหลักฐานมาแสดงว่าได้เดินทางกลับเนื่องจากสิ้นสุดสัญญาการจ้าง หรือได้รับคำสั่งให้ย้ายกลับมาปฏิบัติหน้าที่ในราชอาณาจักร หรือเสร็จสิ้นการดูงานก่อนกำหนด
 	- คนไทยที่ไปอยู่ประจำในต่างประเทศในกรณีอื่นเป็นระยะเวลาไม่น้อยกว่า 1 ปี ต้องให้คำรับรองต่อพนักงานเจ้าหน้าที่ว่าจะกลับเข้ามามีภูมิลำเนาในประเทศไทย
 4. ของใช้ในบ้านเรือนจะยกเว้นอากรตามประเภทที่ 6 ภาค 4 ให้ได้เท่าที่เป็นจำนวนพอสมควร  เช่น ตู้เย็น เครื่องรับโทรทัศน์ วิทยุ จะยกเว้นให้เพียง 1 เครื่อง ถ้ามีมากกว่า 1 เครื่อง จะยกเว้นอากรให้เพียง 1 เครื่องเท่านั้น  และเครื่องที่ยกเว้นค่าอากรให้นั้นต้องเป็นเครื่องที่มีค่าอากรต่ำสุด 
 5. ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้
@@ -112,7 +111,7 @@
 	- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
 	- อากร ยกเว้น (บันทึก Exemption Rate = 100%)
 	- VAT ยกเว้น (บันทึก Exemption Rate = 100%)
-ให้ยื่นคำร้องต่อหน่วยงานศุลกากร ณ ด่านศุลกากร ที่นำของเข้า โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภท 6 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการยกเว้นอากรของใช้ในบ้านเรือน 
+6. ให้ยื่นคำร้องต่อหน่วยงานศุลกากร ณ ด่านศุลกากร ที่นำของเข้า โดยระบุเลขที่ใบขนสินค้าขาเข้าที่ของใช้สิทธิตามประเภท 6 ภาค 4 เพื่อตรวจสอบการใช้สิทธิในการยกเว้นอากรของใช้ในบ้านเรือน 
  
 
 
@@ -324,11 +323,11 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbNjM0ODAzMzY3LC0xOTIwMTYwMTY1LC0xMT
-MxMjA1NDk5LDE2Nzk2MjA5NzYsODE0NjA1ODgxLDk1NTAxNjI4
-NywxODc4ODYzNzQ5LC05NDY4MjIzNDksMTc4OTk4MDg5NCwtMT
-Y1ODM4NjkwMCw2Mjk2OTAyODQsNTk0Mzk1MTcyLDI2MTYwMjQ3
-OCwxOTEyMzkyMDQ2LC00MjUxMzE2NjIsLTI3MjQwNjcyMCwtMj
-A5NDMzNDk5NCwtMTQzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIx
-MzE1MV19
+eyJoaXN0b3J5IjpbLTYwNzQ1NTY0NywtMTkyMDE2MDE2NSwtMT
+EzMTIwNTQ5OSwxNjc5NjIwOTc2LDgxNDYwNTg4MSw5NTUwMTYy
+ODcsMTg3ODg2Mzc0OSwtOTQ2ODIyMzQ5LDE3ODk5ODA4OTQsLT
+E2NTgzODY5MDAsNjI5NjkwMjg0LDU5NDM5NTE3MiwyNjE2MDI0
+NzgsMTkxMjM5MjA0NiwtNDI1MTMxNjYyLC0yNzI0MDY3MjAsLT
+IwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLTk1MTQxMjYyMyw4MTAy
+MTMxNTFdfQ==
 -->
