KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md updated from https://stackedit.io/

--- a/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
+++ b/KnowledgeCenter/e-Customs/e-Import/e-Import-manual/ภาค 4 ของที่ได้รับยกเว้นอากร.md
@@ -106,7 +106,7 @@
 4. ของใช้ในบ้านเรือนจะยกเว้นอากรตามประเภทที่ 6 ภาค 4 ให้ได้เท่าที่เป็นจำนวนพอสมควร  เช่น ตู้เย็น เครื่องรับโทรทัศน์ วิทยุ จะยกเว้นให้เพียง 1 เครื่อง ถ้ามีมากกว่า 1 เครื่อง จะยกเว้นอากรให้เพียง 1 เครื่องเท่านั้น  และเครื่องที่ยกเว้นค่าอากรให้นั้นต้องเป็นเครื่องที่มีค่าอากรต่ำสุด 
 5. ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้
 	- การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า 
-	- ระบุ Import Tariff = 6PART4 (ของใช้ในบ้านเรือนที่ใช้แล้ว ที่เจ้าของนำเข้ามาพร้อมกับตนเนื่องในการย้ายภูมิลำเนา)
+	- ระบุ Import Tariff = **6PART4** (ของใช้ในบ้านเรือนที่ใช้แล้ว ที่เจ้าของนำเข้ามาพร้อมกับตนเนื่องในการย้ายภูมิลำเนา)
 	- ระบุ Privilege Code = ตามสิทธิ ณ ขณะนำเข้า 
 	- อัตราอากร ใช้ Tariff Code และ Tariff Sequence ไปอ่านอัตราอากรที่ Table REFDRT
 	- อากร ยกเว้น (บันทึก Exemption Rate = 100%)
@@ -115,14 +115,7 @@
  
 
 
-**ของใช้ในบ้านเรือนที่ใช้แล้ว ที่เจ้าของนำเข้ามาพร้อมกับตน เนื่องในการย้ายภูมิลำเนาและมีจำนวนพอสมควรแก่ฐานะ** ได้รับยกเว้นอากร ของใช้ในบ้านเรือนตามประเภทที่ 6 จะต้องนำเข้ามาถึงประเทศไทยไม่เกิน 1 เดือนก่อนที่ผู้นำของเข้ามาถึง หรือไม่เกิน 6 เดือนนับแต่วันที่ผู้นำของเข้าเข้ามาถึง ให้ผู้ได้รับยกเว้นอากรจัดทำและส่งข้อมูลใบขนสินค้าขาเข้า โดยระบุค่าดังนี้
 
-- การสำแดงพิกัดศุลกากรและรหัสสถิติสินค้าให้สำแดงตรงกับชนิดของของที่นำเข้า 
-- ระบุ Import Tariff = **6PART4** 
-- ระบุ Privilege Code = ตามสิทธิ ณ ขณะนำเข้า 
-- อัตราอากร ใช้ Tariff Code และ Tariff Sequence 
-- อากร ยกเว้น (บันทึก Exemption Rate = 100%)
-- VAT ยกเว้น (บันทึก Exemption Rate = 100%)
 
 
 
@@ -323,11 +316,11 @@
 
 
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTYwNzQ1NTY0NywtMTkyMDE2MDE2NSwtMT
-EzMTIwNTQ5OSwxNjc5NjIwOTc2LDgxNDYwNTg4MSw5NTUwMTYy
-ODcsMTg3ODg2Mzc0OSwtOTQ2ODIyMzQ5LDE3ODk5ODA4OTQsLT
-E2NTgzODY5MDAsNjI5NjkwMjg0LDU5NDM5NTE3MiwyNjE2MDI0
-NzgsMTkxMjM5MjA0NiwtNDI1MTMxNjYyLC0yNzI0MDY3MjAsLT
-IwOTQzMzQ5OTQsLTE0MzE3MDA1NDksLTk1MTQxMjYyMyw4MTAy
-MTMxNTFdfQ==
+eyJoaXN0b3J5IjpbOTExNTkyNjk5LC0xOTIwMTYwMTY1LC0xMT
+MxMjA1NDk5LDE2Nzk2MjA5NzYsODE0NjA1ODgxLDk1NTAxNjI4
+NywxODc4ODYzNzQ5LC05NDY4MjIzNDksMTc4OTk4MDg5NCwtMT
+Y1ODM4NjkwMCw2Mjk2OTAyODQsNTk0Mzk1MTcyLDI2MTYwMjQ3
+OCwxOTEyMzkyMDQ2LC00MjUxMzE2NjIsLTI3MjQwNjcyMCwtMj
+A5NDMzNDk5NCwtMTQzMTcwMDU0OSwtOTUxNDEyNjIzLDgxMDIx
+MzE1MV19
 -->
