--- a/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
+++ b/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
@@ -13,14 +13,14 @@
 
 2. ตามพจนานุกรม ฉบับราชบัณฑิตยสถาน พ.ศ. 2554 “ปรับปรุง” หมายความว่า แก้ไขให้เรียบร้อยยิ่งขึ้น  “ซ่อม” หมายความว่า ทำสิ่งที่ชำรุดให้คืนดี ดังนั้น “การปรับปรุงหรือซ่อมด้วยวิธีการใดๆ ให้มีสภาพใช้งานได้” หมายความถึง การแก้ไขหรือปรับปรุงของที่ชำรุดหรือเสียหายให้คืนดีหรือเรียบร้อยยิ่งขึ้น แต่ไม่รวมถึง การบำรุงรักษาทั่วไปหรือตรวจสภาพการใช้งาน อาทิ การทำความสะอาด การขัดสีที่มิได้อยู่ในกระบวนการทำสีและซ่อมสี  การตรวจสอบสภาพเครื่องยนต์ การทดสอบระบบการขับเคลื่อน การตรวจสอบระบบไฟฟ้า เป็นต้น ทั้งนี้ ผู้นำเข้าจะต้องแสดงเอกสารหรือหลักฐานการปรับปรุงหรือซ่อมเมื่อดำเนินการแล้วเสร็จ
 
-อนึ่ง ผู้ประกอบการรายใดที่ได้รับอนุญาตจากกรมการค้าต่างประเทศให้นำเข้ารถยนต์เพื่อปรับสภาพแล้วส่งออกก่อนวันที่ 10 ธันวาคม 2562 จะต้องปฏิบัติให้เป็นไปตามเงื่อนไขที่กำหนดตามกฎหมายเดิมจนกว่าจะพ้นภาระและความรับผิด ทั้งนี้ รวมถึงการนำเข้ารถยนต์เป็นการชั่วคราวด้วย
+อนึ่ง ผู้ประกอบการรายใดที่ได้รับอนุญาตจากกรมการค้าต่างประเทศให้นำเข้ารถยนต์เพื่อปรับสภาพแล้วส่งออก**ก่อนวันที่ 10 ธันวาคม 2562** จะต้องปฏิบัติให้เป็นไปตามเงื่อนไขที่กำหนดตามกฎหมายเดิมจนกว่าจะพ้นภาระและความรับผิด ทั้งนี้ รวมถึงการนำเข้ารถยนต์เป็นการชั่วคราวด้วย
 
-นายกีรติกล่าวเพิ่มเติมว่า การฝ่าฝืนนำเข้าสินค้าต้องห้ามจะมีความผิดตามพระราชบัญญัติการส่งออกไปนอกและการนำเข้ามาในราชอาณาจักรซึ่งสินค้า พ.ศ.2522 ดังนั้น หากผู้ประกอบการรายใดฝ่าฝืนนำเข้าสินค้ารถยนต์ใช้แล้วตามพิกัดอัตราศุลกากรประเภท 87.01 (ยกเว้นรถหัวลาก) ประเภท 87.02 ประเภท 87.03 (ยกเว้นรถพยาบาล) ประเภท 87.04 และรถยนต์ใช้แล้วที่มีอายุเกินหนึ่งร้อยปี (รถโบราณ) ตามพิกัดอัตราศุลกากรประเภท  97.06 ซึ่งเป็นสินค้าต้องห้ามนำเข้าแล้ว กรมศุลกากรจะดำเนินการทำลายรถยนต์ดังกล่าว ผู้ประสงค์นำเข้าจึงต้องตรวจสอบประเภทรถยนต์ใช้แล้วให้เรียบร้อยก่อนนำเข้าว่าเข้าข่ายต้องห้ามนำเข้าหรือไม่
+นายกีรติกล่าวเพิ่มเติมว่า การฝ่าฝืนนำเข้าสินค้าต้องห้ามจะมีความผิดตามพระราชบัญญัติการส่งออกไปนอกและการนำเข้ามาในราชอาณาจักรซึ่งสินค้า พ.ศ.2522 ดังนั้น หากผู้ประกอบการรายใดฝ่าฝืนนำเข้าสินค้ารถยนต์ใช้แล้วตามพิกัดอัตราศุลกากรประเภท **87.01 (ยกเว้นรถหัวลาก) ประเภท 87.02 ประเภท 87.03 (ยกเว้นรถพยาบาล) ประเภท 87.04 และรถยนต์ใช้แล้วที่มีอายุเกินหนึ่งร้อยปี (รถโบราณ) ตามพิกัดอัตราศุลกากรประเภท  97.06 ซึ่งเป็นสินค้าต้องห้ามนำเข้าแล้ว** กรมศุลกากรจะดำเนินการทำลายรถยนต์ดังกล่าว ผู้ประสงค์นำเข้าจึงต้องตรวจสอบประเภทรถยนต์ใช้แล้วให้เรียบร้อยก่อนนำเข้าว่าเข้าข่ายต้องห้ามนำเข้าหรือไม่
 
 ทั้งนี้ ผู้ประกอบการสามารถสอบถามข้อมูลเพิ่มเติมได้ที่ กองบริหารการค้าสินค้าทั่วไป โทร. 02-547-5124  หรือเว็บไซต์กรมการค้าต่างประเทศ www.dft.go.th หรือสายด่วน 1385
 
 
 > ที่มา : [กรมการค้าต่างประเทศ](http://www.dft.go.th/th-th/NewsList/News-DFT/Description-News-DFT/ArticleId/13963/13963).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTIwNDMwNjU5Nl19
+eyJoaXN0b3J5IjpbMTk2Nzc5OTgzNl19
 -->
