--- a/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
+++ b/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
@@ -19,8 +19,11 @@
 
 ทั้งนี้ ผู้ประกอบการสามารถสอบถามข้อมูลเพิ่มเติมได้ที่ กองบริหารการค้าสินค้าทั่วไป โทร. 02-547-5124  หรือเว็บไซต์กรมการค้าต่างประเทศ www.dft.go.th หรือสายด่วน 1385
 
+**ประกาศที่เกี่ยวข้อง**
+
+
 
 > ที่มา : [กรมการค้าต่างประเทศ](http://www.dft.go.th/th-th/NewsList/News-DFT/Description-News-DFT/ArticleId/13963/13963).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTk2Nzc5OTgzNl19
+eyJoaXN0b3J5IjpbMTU2MDMyNDg4OSwxOTY3Nzk5ODM2XX0=
 -->
