KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md updated from https://stackedit.io/

--- a/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
+++ b/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
@@ -20,10 +20,11 @@
 ทั้งนี้ ผู้ประกอบการสามารถสอบถามข้อมูลเพิ่มเติมได้ที่ กองบริหารการค้าสินค้าทั่วไป โทร. 02-547-5124  หรือเว็บไซต์กรมการค้าต่างประเทศ www.dft.go.th หรือสายด่วน 1385
 
 **ประกาศที่เกี่ยวข้อง**
-
+- [ประกาศกระทรวงพาณิชย์ เรื่อง กำหนดให้รถยนต์ใช้แล้วเป็นสินค้าที่ต้องห้ามหรือต้องขออนุญาตในการนำเข้ามาในราชอาณาจักร พ.ศ. 2562](http://www.dft.go.th/th-th/Detail-Law/ArticleId/13483/13483)
+- [ประกาศกรมการค้าต่างประเทศ การดำเนินการออกใบอนุญาตให้นำเข้ารถยนต์ที่ใช้แล้ว พ.ศ. 2562](http://www.dft.go.th/th-th/Detail-Law/ArticleId/13616/13616)
 
 
 > ที่มา : [กรมการค้าต่างประเทศ](http://www.dft.go.th/th-th/NewsList/News-DFT/Description-News-DFT/ArticleId/13963/13963).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTU2MDMyNDg4OSwxOTY3Nzk5ODM2XX0=
+eyJoaXN0b3J5IjpbMTE0MDU5ODgyMCwxOTY3Nzk5ODM2XX0=
 -->
