KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md updated from https://stackedit.io/

--- a/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
+++ b/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
@@ -1,6 +1,7 @@
 
 การบังคับใช้ประกาศรถยนต์ใช้แล้ว
 ===
+
 **_กรมการค้าต่างประเทศ แจงข้อกำหนดและการบังคับใช้ประกาศห้ามนำเข้ารถยนต์ใช้แล้ว ก่อนจะมีผลบังคับใช้ 10 ธ.ค. นี้ ย้ำหากนำเข้ารถยนต์ภายใต้ระเบียบเดิมต้องดำเนินการไม่เกินวันที่ 9 ธ.ค. 62 เท่านั้น_**
 
 นายกีรติ รัชโน อธิบดีกรมการค้าต่างประเทศ เปิดเผยว่า กระทรวงพาณิชย์ได้ออกประกาศกำหนดให้รถยนต์ใช้แล้วเป็นสินค้าที่ต้องห้ามหรือต้องขออนุญาตในการนำเข้ามาในราชอาณาจักร ซึ่งจะมีผลใช้บังคับวันที่ 10 ธันวาคม 2562 เป็นต้นไป โดยกำหนดห้ามนำเข้ารถยนต์ใช้แล้วหลายชนิด โดยเฉพาะรถยนต์นั่งใช้แล้วส่วนตัว  ซึ่งใบอนุญาตนำเข้ารถยนต์ใช้แล้วทุกประเภทที่ออกตามหลักเกณฑ์และเงื่อนไขของกฎหมายฉบับเดิม จะมีอายุไม่เกินวันที่ 9 ธันวาคม 2562 ดังนั้น ผู้ได้รับใบอนุญาตแล้วจะต้องนำเข้ารถยนต์ให้แล้วเสร็จภายในอายุใบอนุญาตด้วย
@@ -26,5 +27,6 @@
 
 > ที่มา : [กรมการค้าต่างประเทศ](http://www.dft.go.th/th-th/NewsList/News-DFT/Description-News-DFT/ArticleId/13963/13963).
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbMTE0MDU5ODgyMCwxOTY3Nzk5ODM2XX0=
+eyJoaXN0b3J5IjpbLTEyNjQzNzI5MTAsMTE0MDU5ODgyMCwxOT
+Y3Nzk5ODM2XX0=
 -->
