KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md updated from https://stackedit.io/

--- a/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
+++ b/KnowledgeCenter/articles/news/รถยนต์ใช้แล้ว.md
@@ -1,7 +1,7 @@
 
 การบังคับใช้ประกาศรถยนต์ใช้แล้ว
 ===
-![enter image description here](https://cdn.pixabay.com/photo/2018/04/28/18/32/auto-3357931_960_720.jpg)
+
 
 **_กรมการค้าต่างประเทศ แจงข้อกำหนดและการบังคับใช้ประกาศห้ามนำเข้ารถยนต์ใช้แล้ว ก่อนจะมีผลบังคับใช้ 10 ธ.ค. นี้ ย้ำหากนำเข้ารถยนต์ภายใต้ระเบียบเดิมต้องดำเนินการไม่เกินวันที่ 9 ธ.ค. 62 เท่านั้น_**
 
@@ -27,7 +27,10 @@
 
 
 > ที่มา : [กรมการค้าต่างประเทศ](http://www.dft.go.th/th-th/NewsList/News-DFT/Description-News-DFT/ArticleId/13963/13963).
+
+
+> E-Customs Service Co., Ltd.
 <!--stackedit_data:
-eyJoaXN0b3J5IjpbLTczMjc5MjkyLDExNDA1OTg4MjAsMTk2Nz
-c5OTgzNl19
+eyJoaXN0b3J5IjpbMTc0ODA0OTUyNSwtNzMyNzkyOTIsMTE0MD
+U5ODgyMCwxOTY3Nzk5ODM2XX0=
 -->
